# pytitan

./: .gcloudignore  .gitignore  FINAL_STRUCTURE.md  Procfile  RESTRUCTURE_SUMMARY.md  SETUP_GUIDE.md  pyproject.toml  pyvenv.cfg  requirements.txt  setup_env.py  setup_google_oauth.py  setup_snowflake.py  start.sh  test_setup.py
app/: google_oidc.py  main.py  myauth.py  myfilter.py  myquery.py  myregistry.py  myrequire.py  myroutes.py  mysession.py  mysnowflake.py  mytsx.py  myvalidations.py  registry.py
app/ai/: __init__.py  endpoints.py  service.py
app/ai/schemas/: Other.json  WineRackLayerTemplate.json
app/ai/tools/: __init__.py  clarify_field.py  hydrate_object.py  infer_schema.py  validate_object.py
app/ai/utils/: __init__.py  schema_loader.py
app/ai/workflow/: __init__.py  graph.py  nodes.py  state.py  ui.py
app/auth/: __init__.py  oauth.py  require.py
app/database/: __init__.py  snowflake.py
app/filters/: __init__.py  models.py
app/query/: __init__.py  builder.py
app/routes/: __init__.py  auth_routes.py
app/session/: __init__.py  jwt.py
app/tsx/: __init__.py  generator.py
app/validation/: __init__.py  rules.py
config/: views.yaml
